{
    "name": "InputControls",
    "maps": [
        {
            "name": "PlayerInputs",
            "id": "4d21993a-e88d-439e-8758-eea2540eb62e",
            "actions": [
                {
                    "name": "MoveControls",
                    "type": "Value",
                    "id": "ccc80a20-6828-4934-812c-5529b4b86a78",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "2b7d158c-09be-4d77-8612-949ad5b9f7a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "1a05b17b-d094-4a19-898c-d46c3666a273",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "8c26bb40-0b7f-448b-be2a-d2cdc55e2d40",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveControls",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "dfa6fde5-925c-4312-a2a0-963de2817ee5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "585ccd91-cfb2-429f-be82-2337f8048cec",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6668ee5e-18b4-4a23-a502-e901a9993050",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fc592212-0593-41e0-9e0d-f284a94a3114",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "483160f9-5692-4943-a433-11367d0019f7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5f2c6917-2168-4ec1-a6a7-91b09e9363c1",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b769a039-9071-4f97-8d8c-dab1aacef53c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9b4c29b2-a24b-4e62-a5df-1ad30185aae8",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveControls",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e17b0d05-7f63-4d20-a823-bd925a304fae",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(pressPoint=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04acb1f7-896c-4d02-8f91-d7da5897e600",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "ScaleVector2(x=5,y=5)",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}